--- a/04.collections/datatypes_cycles_2.ipynb
+++ b/04.collections/datatypes_cycles_2.ipynb
@@ -1,18 +1,26 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "**Задание 1**. Дан список с визитами по городам и странам. \n",
     "Напишите код, который возвращает отфильтрованный список geo_logs, содержащий только визиты из России."
-   ]
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "\nFinal list is:\n{'visit1': ['Москва', 'Россия']}\n{'visit3': ['Владимир', 'Россия']}\n{'visit7': ['Тула', 'Россия']}\n{'visit8': ['Тула', 'Россия']}\n{'visit9': ['Курск', 'Россия']}\n{'visit10': ['Архангельск', 'Россия']}\n"
+     ]
+    }
+   ],
    "source": [
     "geo_logs = [\n",
     "    {'visit1': ['Москва', 'Россия']},\n",
@@ -25,7 +33,14 @@
     "    {'visit8': ['Тула', 'Россия']},\n",
     "    {'visit9': ['Курск', 'Россия']},\n",
     "    {'visit10': ['Архангельск', 'Россия']}\n",
-    "]"
+    "]\n",
+    "\n",
+    "for record in list(geo_logs):\n",
+    "    for place in record.values():\n",
+    "        if 'Россия' not in place:\n",
+    "            del geo_logs[geo_logs.index(record)]\n",
+    "print('\\nFinal list is:')\n",
+    "print(*geo_logs, sep='\\n')"
    ]
   },
   {
@@ -37,13 +52,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "{98, 35, 15, 213, 54, 119}\n"
+     ]
+    }
+   ],
    "source": [
     "ids = {'user1': [213, 213, 213, 15, 213], \n",
     "       'user2': [54, 54, 119, 119, 119], \n",
-    "       'user3': [213, 98, 98, 35]}"
+    "       'user3': [213, 98, 98, 35]}\n",
+    "\n",
+    "final_str = ''\n",
+    "big_list = []\n",
+    "for seq in ids.values():\n",
+    "       big_list = big_list + seq\n",
+    "uniq = set(big_list)\n",
+    "print(uniq)"
    ]
   },
   {
@@ -56,9 +86,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Статистика поисковых запросов:\n  из 2 слов - 43%\n  из 3 слов - 57%\n"
+     ]
+    }
+   ],
    "source": [
     "queries = [\n",
     "    'смотреть сериалы онлайн',\n",
@@ -68,7 +106,19 @@
     "    'сериалы этим летом',\n",
     "    'курс по питону',\n",
     "    'сериалы про спорт',\n",
-    "]"
+    "]\n",
+    "\n",
+    "raw_stats = []\n",
+    "\n",
+    "for item in queries:\n",
+    "    words_count = 1 + item.count(' ')\n",
+    "    raw_stats.append(words_count)\n",
+    "stat_dict = dict.fromkeys(set(raw_stats))\n",
+    "for number in stat_dict.keys():\n",
+    "    stat_dict[number] = round(raw_stats.count(number) / len(raw_stats) * 100)\n",
+    "print('Статистика поисковых запросов:')\n",
+    "for number, percent in stat_dict.items():\n",
+    "    print(f'  из {number} слов - {percent}%')"
    ]
   },
   {
@@ -119,7 +169,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5-final"
   }
  },
  "nbformat": 4,
